[package]
name = "rust-rss-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
feed-rs = "1.2.0"
kdl = "4.6.0"
futures = "0.3.25"
chrono = "0.4.23"